force-app/main/default/objects/Matter_Team__c/Matter_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object for tracking matter team assignments and roles</description>
    <label>Matter Team</label>
    <nameField>
        <displayFormat>MT-{00000}</displayFormat>
        <label>Matter Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>