force-app/main/default/objects/Matter_Team__c/fields/Employee_Ref__c.field-meta.xml
<CustomField>
    <fullName>Employee_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>undefined</relationshipLabel>
    <relationshipName>undefined</relationshipName>
    <type>Lookup</type>
</CustomField>