force-app/main/default/objects/Matter_Team__c/fields/Matter_ID__c.field-meta.xml
<CustomField>
    <fullName>Matter_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>undefined</relationshipLabel>
    <relationshipName>undefined</relationshipName>
    <type>Lookup</type>
</CustomField>