force-app/main/default/objects/Matter_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Junior Associate</fullName>
            </value>
            <value>
                <fullName>Lead Attorney</fullName>
            </value>
            <value>
                <fullName>Legal Assistant</fullName>
            </value>
            <value>
                <fullName>Matter Partner</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Senior Associate</fullName>
            </value>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>